--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -29,8 +29,6 @@
   <input #searchTerm autofocus type="text" 
   placeholder="enter search term and click enter" 
   (keyup.enter)="search(searchTerm.value)" />
-  <!-- {{user | json}}<br>
-  {{ userId }} -->
   <br>
   <button (click)="onSignOutClick()">SIGN OUT</button>
   <br>
@@ -51,17 +49,29 @@
     <button (click)="onDeleteSelection(selection)">delete</button>
   </p>
   <br />
-  <section class="vidlist">
-  <div *ngFor="let item of vidList">
-    <h6>
-    <a target="_blank" [href]="'http://youtube.com/watch?v=' + item.id.videoId">
-    {{ item.snippet.title }}<br>
-    </a>
-    </h6>
-      <!-- <img [src]="item.snippet.thumbnails.default.url" /> -->
-    <iframe width="420" height="345" [src]="'https://www.youtube.com/embed/' + item.id.videoId | safe">
-    </iframe>
-  </div>
-  </section>
+  <table mat-table [dataSource]="vidList" class="mat-elevation-z8">
+
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+    <!-- Thumbnail Column -->
+    <ng-container matColumnDef="thumbnail">
+      <th mat-header-cell *matHeaderCellDef> Thumbnail </th>
+      <td mat-cell *matCellDef="let element"> 
+          <img (click)="openVideoDialog(element.id.videoId)" [src]="element.snippet.thumbnails.default.url" />
+      </td>
+    </ng-container>
+
+    <!-- title Column -->
+    <ng-container matColumnDef="title">
+      <th mat-header-cell *matHeaderCellDef> Title. </th>
+      <td mat-cell *matCellDef="let element">  
+        <span (click)="openVideoDialog(element.id.videoId)">{{ element.snippet.title }}</span>
+      </td>
+    </ng-container>
+  
+    <tr mat-header-row *matHeaderRowDef="['thumbnail','title']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['thumbnail','title'];"></tr>
+  </table>
+  
 
 </section>
