--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,7 +53,7 @@
     <button (click)="onDeleteSelection(selection)">delete</button>
   </p>
   <br />
-  <table mat-table [dataSource]="vidList" class="mat-elevation-z8">
+  <table mat-table matSort [dataSource]="vidList" (matSortChange)="onSortChange($event)" class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
@@ -67,14 +67,23 @@
 
     <!-- title Column -->
     <ng-container matColumnDef="title">
-      <th mat-header-cell *matHeaderCellDef> Title. </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
       <td mat-cell *matCellDef="let element">  
         <span (click)="openVideoDialog(element.id.videoId)">{{ element.snippet.title }}</span>
       </td>
     </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="['thumbnail','title']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['thumbnail','title'];"></tr>
+
+    <!-- published Column -->
+    <ng-container matColumnDef="publishedAt">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Published At </th>
+      
+      <td mat-cell *matCellDef="let element">  
+        <span (click)="openVideoDialog(element.id.videoId)">{{ element.snippet.publishedAt }}</span>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="['thumbnail','title','publishedAt']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['thumbnail','title','publishedAt'];"></tr>
   </table>
   
 
