auth form component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,9 @@
 
 <h1 *ngIf="userId">logged in user: {{user?.email | json }}</h1>
 
-  <form *ngIf="!userId" [formGroup]="signUpForm" (ngSubmit)="createAccount()">
+<app-auth-form *ngIf="!userId" (submitted)="onSignInSubmit($event)"></app-auth-form>
+
+  <!-- <form *ngIf="!userId" [formGroup]="signUpForm" (ngSubmit)="createAccount()">
     <h3>Sign Up</h3>
     <label for="email">Email:</label>
     <input type="email" id="email" name="email" formControlName="email" required>
@@ -22,12 +24,14 @@
     <input type="password" id="password" name="password" formControlName="password" required>
   
     <button type="submit" [disabled]="signInForm.invalid">Sign In</button>
-  </form>
+  </form> -->
 
 <section *ngIf="userId">
 <!-- put the corresponding logos in place of text here -->
   <a href="#" (click)="search('full game highlights', 'UCWJ2lWNubArHWmf3FIHbfcQ')">nba channel highlights</a> | 
+  <a href="#" (click)="search('full game highlights', 'UCqFMzb-4AUf6WAIbl132QKA')">nhl channel highlights</a> | 
   <a href="#" (click)="search('full game highlights', 'UCDVYQ4Zhbm3S2dlz7P1GBDg')">nfl channel highlights</a> | 
+  <a href="#" (click)="search('game highlights', 'UCoLrcjPV5PbUrUyXq5mjc_A')">mlb channel highlights</a> | 
   <a href="#" (click)="search('premier league highlights','UCqZQlzSHbVJrwrn5XvzrzcA')">premier league highlights</a>
 
   <input #searchTerm autofocus type="text" 
