--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,6 +3,14 @@
     flex-wrap: wrap;
 }
 
+.auth-section {
+    > * {margin: 2rem;}
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
 div {
     overflow: hidden;
 }
