--- a/src/app/components/auth-form/auth-form.component.html
+++ b/src/app/components/auth-form/auth-form.component.html
@@ -1,7 +1,7 @@
 <mat-card>
-    <mat-card-title>Login or Sign Up</mat-card-title>
+    <mat-card-title>{{signIn ? 'Login' : 'Sign Up' }}</mat-card-title>
     <mat-card-content>
-      <form [formGroup]="authForm" (ngSubmit)="onSubmit()">
+      <form [formGroup]="authForm" (ngSubmit)="onSubmit()" class="auth-form">
         <mat-form-field>
           <input matInput placeholder="Email" formControlName="email" />
           <mat-error *ngIf="email?.hasError('required')">Email is required</mat-error>
