--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <header>
   <h4 *ngIf="userId">{{ user?.email }}</h4>
   <button (click)="onSignOutClick()">SIGN OUT</button>
@@ -9,7 +8,7 @@
   <app-auth-form [signIn]="false" *ngIf="!userId" (submitted)="createAccount($event)"></app-auth-form>
 </section>
 
-<section *ngIf="userId">
+<section class="main-section" *ngIf="userId">
   <div class="logos">
     <a href="#" (click)="search('full game highlights', 'UCWJ2lWNubArHWmf3FIHbfcQ')"><img src="assets/nba.png" alt="nba channel highlights" /></a>
     <a href="#" (click)="search('full game highlights', 'UCqFMzb-4AUf6WAIbl132QKA')"><img src="assets/nhl.png" alt="nhl channel highlights" /></a>
@@ -18,27 +17,46 @@
     <a href="#" (click)="search('premier league highlights','UCqZQlzSHbVJrwrn5XvzrzcA')"><img src="assets/premier.png" alt="premier league highlights" /></a>
   </div>
 
-  <input #searchTerm autofocus type="text" 
+  <input #searchTerm type="text" 
   placeholder="or enter a search term and click enter" 
   (keyup.enter)="search(searchTerm.value)" />
   <br>
   <br>
 
-  <form [formGroup]="selectionForm" (ngSubmit)="onSelectionSubmit()">
-    <input type="text" id="name" formControlName="name" 
-    placeholder="enter a custom preset selection">
-    <input type="checkbox" formControlName="preLoad" /> 
-    <label for="selections">Your selections:</label>
-    
-    <button type="submit">Submit</button>
-  </form>
-  <p *ngFor="let selection of selections">
-    <a href="#" (click)="search(selection.name);searchTerm.value = selection.name">
-    {{selection.name}}</a> 
-    load on start: 
-    <input (click)="onPreLoadToggle(selection)" type="checkbox" [checked]="selection.preLoad" />
-    <button (click)="onDeleteSelection(selection)">delete</button>
-  </p>
+  <mat-card>
+    <form [formGroup]="selectionForm" (ngSubmit)="onSelectionSubmit()">
+      <mat-form-field>
+        <input type="text" matInput id="name" formControlName="name" placeholder="enter a custom preset selection">
+      </mat-form-field>
+      <mat-checkbox formControlName="preLoad">Pre-load</mat-checkbox>
+      <button type="submit">Submit</button>
+    </form>
+  </mat-card>
+
+  
+  <table mat-table [dataSource]="selections">
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let selection">
+        <a href="#" (click)="search(selection?.name);searchTerm.value = selection?.name">{{selection?.name}}</a>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="preLoad">
+      <th mat-header-cell *matHeaderCellDef>Load on Start</th>
+      <td mat-cell *matCellDef="let selection">
+        <mat-checkbox (click)="onPreLoadToggle(selection)" [checked]="selection?.preLoad"></mat-checkbox>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
+      <td mat-cell *matCellDef="let selection">
+        <button mat-button color="warn" (click)="onDeleteSelection(selection)">Delete</button>
+      </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="['name', 'preLoad', 'actions']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['name', 'preLoad', 'actions']"></tr>
+  </table>
+  
   <br />
   <table mat-table matSort [dataSource]="vidList" (matSortChange)="onSortChange($event)" class="mat-elevation-z8">
 
@@ -46,9 +64,9 @@
           The actual rendered columns are set as a property on the row definition" -->
     <!-- Thumbnail Column -->
     <ng-container matColumnDef="thumbnail">
-      <th mat-header-cell *matHeaderCellDef> Thumbnail </th>
+      <th mat-header-cell *matHeaderCellDef> </th>
       <td mat-cell *matCellDef="let element"> 
-          <img (click)="openVideoDialog(element.id.videoId)" [src]="element.snippet.thumbnails.default.url" />
+          <a (click)="openVideoDialog(element.id.videoId)"><img [src]="element.snippet.thumbnails.default.url" /></a>
       </td>
     </ng-container>
 
@@ -56,7 +74,7 @@
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Title </th>
       <td mat-cell *matCellDef="let element">  
-        <span (click)="openVideoDialog(element.id.videoId)">{{ element.snippet.title }}</span>
+        <a (click)="openVideoDialog(element.id.videoId)">{{ element.snippet.title }}</a>
       </td>
     </ng-container>
 
@@ -64,9 +82,7 @@
     <ng-container matColumnDef="publishedAt">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> Published At </th>
       
-      <td mat-cell *matCellDef="let element">  
-        <span (click)="openVideoDialog(element.id.videoId)">{{ element.snippet.publishedAt }}</span>
-      </td>
+      <td mat-cell *matCellDef="let element">{{ element.snippet.publishedAt }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="['thumbnail','title','publishedAt']"></tr>
