--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,3 +5,6 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+* {background-color: #111 !important;color: #bbb !important;}
+.main-section {width: 75%;margin: auto;}
