--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,25 @@
 /* You can add global styles to this file, and also import other style files */
 
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
-@import '~@angular/cdk/overlay-prebuilt.css';
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
+@import "~@angular/cdk/overlay-prebuilt.css";
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-* {background-color: #111 !important;color: #bbb !important;}
-.main-section {width: 75%;margin: auto;}
+* {
+  background-color: #555 !important;
+  color: #bbb !important;
+}
+.main-section {
+  width: 75%;
+  margin: auto;
+}
+.cdk-overlay-pane {
+  overflow: hidden;
+}
